[gd_scene load_steps=4 format=3 uid="uid://charcard001"]

[ext_resource type="Script" path="res://scripts/ui/character_card.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.1, 0.08, 0.15, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.4, 0.7, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0.3, 0.2, 0.5, 0.4)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_portrait_bg"]
bg_color = Color(0.08, 0.06, 0.12, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="CharacterCard" type="Control"]
custom_minimum_size = Vector2(100, 195)
layout_mode = 2
size_flags_horizontal = 3
pivot_offset = Vector2(50, 97)
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_card")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="PortraitBG" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 85)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_portrait_bg")

[node name="Portrait" type="TextureRect" parent="Panel/VBoxContainer/PortraitBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_colors/font_outline_color = Color(0.3, 0.2, 0.1, 0.5)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Character"
horizontal_alignment = 1

[node name="Divider" type="ColorRect" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
color = Color(0.5, 0.4, 0.6, 0.5)

[node name="PassiveLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.75, 0.7, 0.85, 1)
theme_override_font_sizes/font_size = 10
text = "Passive"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SelectHint" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.5, 0.8)
theme_override_font_sizes/font_size = 9
text = "Tap to play"
horizontal_alignment = 1

[node name="LockOverlay" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.05, 0.85)

[node name="LockLabel" type="Label" parent="Panel/LockOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -20.0
offset_right = 45.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 10
text = "LOCKED
500 XP"
horizontal_alignment = 1
vertical_alignment = 1
